added loading state for new lend page

--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -235,3 +235,80 @@
 		color: @text-color-secondary;
 	}
 }
+
+.pulse-animate {
+	animation: pulse 3.5s infinite ease-in-out;
+}
+
+// Loading pulse animations
+@keyframes pulse {
+	0% {
+		opacity: 0.2;
+	}
+	25% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
+	75% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.2;
+	}
+}
+
+@-o-keyframes pulse {
+	0% {
+		opacity: 0.2;
+	}
+	25% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
+	75% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.2;
+	}
+}
+
+@-moz-keyframes pulse {
+	0% {
+		opacity: 0.2;
+	}
+	25% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
+	75% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.2;
+	}
+}
+
+@-webkit-keyframes pulse {
+	0% {
+		opacity: 0.2;
+	}
+	25% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
+	75% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.2;
+	}
+}
