--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -329,3 +329,34 @@ b {
 		}
 	}
 }
+
+.capx-modal{
+	&.capx-modal-loading{
+		.ant-modal-content{
+			background: radial-gradient(143.33% 143.33% at 82.41% -4.96%, rgba(132, 214, 164, 0.3) 0%, rgba(18, 28, 32, 0.3) 100%);
+			border-radius: 20px;
+			text-align: center;
+			box-shadow: none;
+			max-width: 480px;
+			.ant-modal-body{
+				padding: 24px 60px;
+			}
+			p{
+				font-size: @font-size-sm + 1;
+			}
+			.modal-icon{
+				.icon{
+					width: 100px;
+				}
+			}
+			h4{
+				color: @text-white;
+				font-size: 22px;
+				font-weight: bold;
+			}
+		}
+		.ant-modal-footer{
+			border-color: @border-card;
+		}
+	}
+}
