added props validation to new lend page

--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -236,6 +236,11 @@
 	}
 }
 
+.disabled-button {
+	opacity: 0.5;
+	pointer-events: none;
+}
+
 .pulse-animate {
 	animation: pulse 3.5s infinite ease-in-out;
 }
