--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -97,6 +97,18 @@
 			}
 		}
 	}
+	.ant-skeleton-paragraph{
+		display: flex;
+		align-items: center;
+		grid-gap: 15px;
+		li{
+			width: 100% !important;
+			margin-top: 0 !important;
+		}
+	}
+	.ant-skeleton-title{
+		margin-top: 0 !important;
+	}
 }
 
 .filter-container {
