--- a/src/containers/Metamask/index.less
+++ b/src/containers/Metamask/index.less
@@ -49,3 +49,10 @@
 		}
 	}
 }
+
+.ant-notification-notice-with-icon {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
+}
