--- a/src/components/layout/SideBar/index.less
+++ b/src/components/layout/SideBar/index.less
@@ -134,6 +134,19 @@
 			min-width: 230px !important;
 			max-width: 230px !important;
 			width: 230px !important;
+			.ant-btn{
+				&.menu-link {
+					right: -30px;
+				}
+			}
+			&.ant-layout-sider-collapsed {
+				left: 0;
+				.ant-btn{
+					&.menu-link {
+						right: -10px;
+					}
+				}
+			}
 		}
 	}
 }
