--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -146,6 +146,9 @@
 				border: 0;
 				background: @success-color;
 			}
+			&.ant-slider-disabled{
+				pointer-events: none;
+			}
 		}
 	}
 	.lendborrow-right {
