--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -173,6 +173,9 @@ b {
 			}
 		}
 	}
+	&.ant-select-disabled{
+		pointer-events: none;
+	}
 }
 
 .ant-select-disabled.ant-select:not(.ant-select-customize-input)
