added no orders found illustration v1

--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -98,16 +98,16 @@
 			}
 		}
 	}
-	.ant-skeleton-paragraph{
+	.ant-skeleton-paragraph {
 		display: flex;
 		align-items: center;
 		grid-gap: 15px;
-		li{
+		li {
 			width: 100% !important;
 			margin-top: 0 !important;
 		}
 	}
-	.ant-skeleton-title{
+	.ant-skeleton-title {
 		margin-top: 0 !important;
 	}
 }
@@ -461,6 +461,13 @@
 			}
 		}
 	}
+}
+
+.no-orders {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .statusIcon {
