--- a/src/containers/Lend-Borrow/ViewProjects/index.less
+++ b/src/containers/Lend-Borrow/ViewProjects/index.less
@@ -67,7 +67,6 @@
 	}
 }
 
-
 .orderlist-card {
 	margin-bottom: 15px;
 	.card-title {
@@ -353,6 +352,13 @@
 			}
 		}
 	}
+}
+
+.no-orders {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .action-outline-btn {
