Added liquidation state.

--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -218,6 +218,10 @@
 					background: #7a5e34;
 					border-color: #7a5e34;
 				}
+				&.badge-liquidated {
+					background: #5ba1ca;
+					border-color: #5ba1ca;
+				}
 			}
 		}
 	}
