cosmetic assets changed and all lottie animations revamped v1

--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -474,14 +474,21 @@
 	align-items: center;
 }
 
-.statusIcon {
+.statusIllustration {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	padding: 1rem;
+
+	.statusIcon {
+		margin-top: -1.5rem;
+		width: 7rem;
+		height: 7rem;
+	}
 	.statusTitle {
 		text-align: center;
 		font-size: 1.5rem;
+		font-weight: 600;
 	}
 }
