--- a/src/containers/Metamask/index.less
+++ b/src/containers/Metamask/index.less
@@ -50,9 +50,13 @@
 	}
 }
 
+.closeIcon {
+	margin-top: 1rem;
+}
+
 .ant-notification-notice-with-icon {
-	display: flex;
+	display: grid;
 	justify-content: flex-start;
 	align-items: center;
-	text-align: center;
+	text-align: left;
 }
