--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -418,3 +418,22 @@ b {
 		min-height: 70vh;
 	}
 }
+
+::-webkit-scrollbar {
+	width: 6px;
+	border-radius: 6px;
+  }
+  
+  ::-webkit-scrollbar-track {
+	background: rgba(@primary-color, 0.5);
+	border-radius: 6px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+	background: @tab-gradient;
+	border-radius: 6px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+	background: #555;
+  }
