--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -17,6 +17,9 @@
 			}
 		}
 		.top-bar-right {
+			@media (max-width: 1919px) {
+				display: none;
+			}
 			font-size: 26px;
 			height: 100%;
 			display: flex;
