stable-coin-config--breakpoint-fix

--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -222,8 +222,8 @@ b {
 
 .breakpoint {
 	//visible below 1920*1080
-	@media (max-width: 1919px) {
-		display: flex;
+	@media (min-width: 1919px) {
+		display: none;
 		width: 100%;
 	}
 	.content-wrapper {
