--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -42,6 +42,9 @@
 		color: @text-white;
 		margin-bottom: 0;
 		font-weight: 700;
+		@media screen and (max-width:1440px) {
+			font-size: 24px;
+		}
 	}
 	.left-col {
 		padding-bottom: 20px;
@@ -91,10 +94,22 @@
 				font-size: 16px;
 				margin-bottom: 0;
 				color: @text-muted;
+				@media screen and (max-width:1440px) {
+					font-size: 12px;
+				}
+				@media screen and (max-width:1280px) {
+					font-size: 10px;
+				}
 			}
 			h4 {
 				font-size: 26px;
 				margin-bottom: 0;
+				@media screen and (max-width:1440px) {
+					font-size: 20px;
+				}
+				@media screen and (max-width:1280px) {
+					font-size: 18px;
+				}
 			}
 		}
 	}
@@ -148,6 +163,12 @@
 		justify-content: space-between;
 		.upper-left {
 			font-size: 20px;
+			@media screen and (max-width:1440px) {
+				font-size: 16px;
+			}
+			@media screen and (max-width:1280px) {
+				font-size: 14px;
+			}
 			b {
 				font-weight: 600;
 			}
@@ -306,11 +327,20 @@
 				p {
 					font-size: 16px;
 					margin-bottom: 0;
+					@media screen and (max-width:1440px) {
+						font-size: 14px;
+					}
+					@media screen and (max-width:1280px) {
+						font-size: 10px;
+					}
 				}
 				h4 {
 					font-size: 20px;
 					margin-bottom: 0;
 					font-weight: 600;
+					@media screen and (max-width:1440px) {
+						font-size: 15px;
+					}
 				}
 			}
 		}
