--- a/src/containers/Lend-Borrow/ViewProjects/index.less
+++ b/src/containers/Lend-Borrow/ViewProjects/index.less
@@ -42,6 +42,9 @@
 		color: @text-white;
 		margin-bottom: 0;
 		font-weight: 700;
+		@media screen and (max-width:1440px) {
+			font-size: 24px;
+		}
 	}
 	.left-col {
 		padding-bottom: 20px;
@@ -115,6 +118,14 @@
 				margin-right: 10px;
 				font-weight: 500;
 				display: inline-block;
+				@media screen and (max-width:1440px) {
+					font-size: 14px;
+				}
+				@media screen and (max-width:1280px) {
+					font-size: 10px;
+					height: 26px;
+					line-height: 26px;
+				}
 				&:last-child {
 					margin-right: 0;
 				}
@@ -238,6 +249,9 @@
 								margin-bottom: 0;
 								color: @text-white;
 								opacity: 0.7;
+								@media screen and (max-width:1440px) {
+									font-size: 12px;
+								}
 								.tooltip-icon {
 									width: 11px;
 									margin-bottom: -1px;
@@ -250,6 +264,9 @@
 								margin-bottom: 0;
 								font-weight: 600;
 								color: @text-white;
+								@media screen and (max-width:1440px) {
+									font-size: 18px;
+								}
 							}
 						}
 					}
