--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -476,3 +476,9 @@ b {
   ::-webkit-scrollbar-thumb:hover {
 	background: #555;
   }
+
+  .filterby-heading{
+	  h3{
+		  margin-bottom: 3px;
+	  }
+  }
