--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -281,6 +281,9 @@
 			li {
 				padding-left: 30px;
 				position: relative;
+				@media screen and (max-width:1600px) {
+					padding-left: 10px;
+				}
 				&:first-child {
 					padding-left: 0;
 				}
@@ -321,6 +324,9 @@
 			li {
 				padding-left: 30px;
 				position: relative;
+				@media screen and (max-width:1600px) {
+					padding-left: 10px;
+				}
 				&:first-child {
 					padding-left: 0;
 				}
@@ -328,7 +334,7 @@
 					font-size: 16px;
 					margin-bottom: 0;
 					@media screen and (max-width:1440px) {
-						font-size: 14px;
+						font-size: 12px;
 					}
 					@media screen and (max-width:1280px) {
 						font-size: 10px;
