--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -54,8 +54,11 @@
 		}
 	}
 	.left-col {
-		padding-bottom: 20px;
+		padding-bottom: 15px;
 		max-width: 100%;
+		@media screen and (max-width:1440px) {
+			padding-bottom: 12px;
+		}
 		.ant-select {
 			.ant-select-selector {
 				color: #a1a1a1;
@@ -79,8 +82,11 @@
 		}
 	}
 	.right-col {
-		padding-bottom: 20px;
+		padding-bottom: 15px;
 		max-width: fit-content;
+		@media screen and (max-width:1440px) {
+			padding-bottom: 12px;
+		}
 		.ant-select {
 			float: right;
 		}
