--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -11,6 +11,10 @@
 			.ant-input {
 				border-radius: 8px 0 0 8px;
 				border-right: 0;
+				@media screen and (max-width:1366px) {
+					height: 36px;
+					line-height: 36px;
+				}
 			}
 			.ant-select {
 				.ant-select-selector {
@@ -37,6 +41,11 @@
 			}
 		}
 		.loanassets-group {
+			.ant-input{
+				@media screen and (max-width:1366px) {
+					height: 36px;
+				}
+			}
 			.ant-btn {
 				height: 100%;
 				height: 40px;
@@ -49,6 +58,9 @@
 				border-color: @border-dark-green;
 				border-left: 0;
 				pointer-events: none;
+				@media screen and (max-width:1366px) {
+					height: 36px;
+				}
 				.icon {
 					width: 20px;
 					margin-right: 4px;
@@ -96,8 +108,8 @@
 			font-weight: 600;
 			display: block;
 			margin-bottom: 3px;
-			@media screen and (max-width: 1280px) {
-				font-size: 13px;
+			@media screen and (max-width: 1366px) {
+				font-size: 12px;
 			}
 			.tooltip-icon {
 				fill: @tooltip-icon;
@@ -171,11 +183,17 @@
 			border-bottom: 1px solid @border-color-base;
 			margin: 0 24px 15px;
 			padding: 15px 0;
+			@media screen and (max-width: 1366px) {
+				padding: 12px 0;
+			}
 			h3 {
 				font-size: 22px;
 				margin-bottom: 0;
 				@media screen and (max-width: 1440px) {
 					font-size: 20px;
+				}
+				@media screen and (max-width: 1366px) {
+					font-size: 19px;
 				}
 				@media screen and (max-width: 1280px) {
 					font-size: 18px;
@@ -187,6 +205,9 @@
 				color: @text-color-secondary;
 				@media screen and (max-width: 1440px) {
 					font-size: 14px;
+				}
+				@media screen and (max-width: 1366px) {
+					font-size: 13px;
 				}
 				@media screen and (max-width: 1280px) {
 					font-size: 12px;
@@ -204,8 +225,8 @@
 					width: 100%;
 					font-size: 15px;
 					color: @text-white;
-					@media screen and (max-width:1280px) {
-						font-size: 14px;
+					@media screen and (max-width:1366px) {
+						font-size: 13px;
 					}
 					label {
 						font-weight: normal;
@@ -224,11 +245,17 @@
 			margin-top: auto;
 			background: #172026;
 			border-radius: 0 0 7px 7px;
+			@media screen and (max-width: 1366px) {
+				padding: 8px 15px;
+			}
 			.left {
 				border-right: 1px solid @border-color-base;
 				margin-right: 30px;
 				padding-right: 20px;
 				min-width: 140px;
+				@media screen and (max-width: 1366px) {
+					line-height: 1.1;
+				}
 				@media screen and (max-width: 1280px) {
 					margin-right: 20px;
     				padding-right: 10px;
@@ -248,8 +275,8 @@
 					@media screen and (max-width: 1440px) {
 						font-size: 28px;
 					}
-					@media screen and (max-width: 1280px) {
-						font-size: 26px;
+					@media screen and (max-width: 1366px) {
+						font-size: 25px;
 					}
 				}
 			}
