Update doc issue and scroll height issue for devices 1440 and 1280

--- a/src/components/layout/NavigationBar/index.less
+++ b/src/components/layout/NavigationBar/index.less
@@ -67,6 +67,12 @@
 							color: @text-white;
 							.svg-icon {
 								margin-right: 8px;
+								display: flex;
+								align-items: center;
+								.svg-icon-inner{
+									display: flex;
+									align-items: center;
+								}
 							}
 							&.ant-select-item-option-active,
 							.ant-select-item-option-selected {
@@ -126,6 +132,8 @@
 				font-weight: normal;
 				.svg-icon {
 					margin-right: 8px;
+					display: flex;
+					align-items: center;
 					.svg-icon-inner {
 						display: flex;
 						align-items: center;
