--- a/src/containers/Dashboard/LendTab/index.less
+++ b/src/containers/Dashboard/LendTab/index.less
@@ -3,3 +3,15 @@
 .test-class {
 	display: flex;
 }
+
+.ScrollbarsCustom {
+	&.dashboard-scroll{
+		height: calc(100vh - 510px) !important;
+		@media screen and (max-width:1440px) {
+			height: calc(100vh - 458px) !important;
+		}
+		@media screen and (max-width:1366px) {
+            height: calc(100vh - 433px) !important;
+        }
+	}
+}
