--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -176,6 +176,7 @@
 			.helthfactor-title {
 				margin-left: 7.5rem;
 				color: #abfab6;
+				font-weight: bold;
 				b {
 					color: #abfab6;
 				}
@@ -321,6 +322,9 @@
 				@media screen and (max-width:1600px) {
 					padding-left: 10px;
 				}
+				@media screen and (max-width:1280px) {
+					padding-left: 5px;
+				}
 				&:first-child {
 					padding-left: 0;
 				}
@@ -331,7 +335,7 @@
 						font-size: 12px;
 					}
 					@media screen and (max-width:1280px) {
-						font-size: 10px;
+						font-size: 11px;
 					}
 				}
 				h4 {
@@ -340,6 +344,9 @@
 					font-weight: 600;
 					@media screen and (max-width:1440px) {
 						font-size: 15px;
+					}
+					@media screen and (max-width:1280px) {
+						font-size: 14px;
 					}
 				}
 			}
@@ -356,6 +363,9 @@
 			padding: 38px 25px 20px 25px;
 			h3 {
 				font-size: 20px;
+				@media screen and (max-width:1440px) {
+					font-size: 18px;
+				}
 			}
 			.additional-info-dtl {
 				display: flex;
@@ -394,6 +404,9 @@
 								margin-bottom: 0;
 								font-weight: 600;
 								color: @text-white;
+								@media screen and (max-width:1280px) {
+									font-size: 14px;
+								}
 							}
 						}
 					}
@@ -408,6 +421,10 @@
 					color: @text-white;
 					.additionalinfo-right-inner {
 						width: 80%;
+						font-size: 16px;
+						@media screen and (max-width:1280px) {
+							font-size: 14px;
+						}
 						.action-btn {
 							background: @btn-gradient;
 							color: @secondary-color;
@@ -420,6 +437,9 @@
 							background: @btn-cancel-gradient;
 							font-weight: bold;
 							border: 0;
+						}
+						.titles-right{
+							font-size: 18px;
 						}
 						b {
 							font-size: 16px;
@@ -515,6 +535,14 @@
 		margin-top: -1.5rem;
 		width: 7rem;
 		height: 7rem;
+		@media screen and (max-width:1440px) {
+			width: 5.375rem;
+			height: 5.375rem;
+		}
+		@media screen and (max-width:1280px) {
+			width: 4.75rem;
+			height: 4.75rem;
+		}
 	}
 	.statusTitle {
 		text-align: center;
