--- a/src/containers/Lend-Borrow/index.less
+++ b/src/containers/Lend-Borrow/index.less
@@ -176,6 +176,9 @@
 		display: flex;
 		flex-direction: column;
 		margin-bottom: 15px;
+		@media screen and (max-width: 1440px) {
+			max-width: 420px;
+		}
 		@media screen and (max-width: 1280px) {
 			max-width: 374px;
 		}
@@ -284,6 +287,7 @@
 				width: 100%;
 				.ant-btn {
 					width: 100%;
+					padding: 0 15px;
 					@media screen and (max-width: 1280px) {
 						padding: 0 15px;
 						font-size: 14px;
