update font issue again

--- a/src/containers/Dashboard/index.less
+++ b/src/containers/Dashboard/index.less
@@ -366,6 +366,9 @@
 				@media screen and (max-width:1440px) {
 					font-size: 18px;
 				}
+				@media screen and (max-width:1280px) {
+					font-size: 16px;
+				}
 			}
 			.additional-info-dtl {
 				display: flex;
@@ -440,6 +443,9 @@
 						}
 						.titles-right{
 							font-size: 18px;
+							@media screen and (max-width:1280px) {
+								font-size: 16px;
+							}
 						}
 						b {
 							font-size: 16px;
@@ -548,5 +554,11 @@
 		text-align: center;
 		font-size: 1.5rem;
 		font-weight: 600;
+		@media screen and (max-width:1440px) {
+			font-size: 1.125rem;
+		}
+		@media screen and (max-width:1280px) {
+			font-size: 1rem;
+		}
 	}
 }
