--- a/src/containers/Lend-Borrow/ViewProjects/index.less
+++ b/src/containers/Lend-Borrow/ViewProjects/index.less
@@ -226,6 +226,9 @@
 				@media screen and (max-width:1440px) {
 					font-size: 18px;
 				}
+				@media screen and (max-width:1280px) {
+					font-size: 16px;
+				}
 			}
 			.additional-info-dtl {
 				display: flex;
