meta mask responsive issue fix for 1280

--- a/src/containers/Metamask/index.less
+++ b/src/containers/Metamask/index.less
@@ -47,6 +47,12 @@
 		@media @upper {
 			width: 25rem;
 		}
+		@media screen and (max-width:1440px) {
+			width: 20rem;
+		}
+		@media screen and (max-width:1366px) {
+			width: 18rem;
+		}
 	}
 }
 
