--- a/src/containers/Dashboard/LendTab/index.less
+++ b/src/containers/Dashboard/LendTab/index.less
@@ -13,5 +13,14 @@
 		@media screen and (max-width:1366px) {
             height: calc(100vh - 433px) !important;
         }
+		.no-orders{
+			height: calc(100vh - 560px) !important;
+			@media screen and (max-width:1440px) {
+				height: calc(100vh - 500px) !important;
+			}
+			@media screen and (max-width:1366px) {
+				height: calc(100vh - 480px) !important;
+			}
+		}
 	}
 }
