--- a/src/containers/Lend-Borrow/ViewProjects/LendTabLB/index.less
+++ b/src/containers/Lend-Borrow/ViewProjects/LendTabLB/index.less
@@ -9,5 +9,14 @@
         @media screen and (max-width:1366px) {
             height: calc(100vh - 342px) !important;
         }
+        .no-orders{
+            height: calc(100vh - 420px) !important;
+            @media screen and (max-width:1440px) {
+                height: calc(100vh - 395px) !important;
+            }
+            @media screen and (max-width:1366px) {
+                height: calc(100vh - 380px) !important;
+            }
+        }
     }
 }
