requested changes of font size ofr 1920and 1440

--- a/src/containers/Metamask/index.less
+++ b/src/containers/Metamask/index.less
@@ -6,7 +6,7 @@
 	align-items: flex-start;
 	top: 7.5rem;
 	position: relative;
-	padding: 4rem 4rem;
+	padding: 4rem 5rem;
 	border-radius: 2rem;
 	margin: auto;
 	background: linear-gradient(
@@ -25,13 +25,13 @@
 
 	@media screen and (max-width:1440px) {
 		top: 7.5rem;
-		width: 70vw;
-		height: 50vh;
+		width: 62vw;
+		height: 55vh;
 	}
 
 	@media screen and (max-width:1366px) {
 		top: 4rem;
-		width: 70vw;
+		width: 65vw;
 		height: 48vh;
 	}
 
@@ -41,6 +41,7 @@
 		font-weight: 600;
 		@media screen and (min-width:1600px) {
 			font-size: 50px;
+			line-height: 1.5;
 		}
 	}
 	.connect-btn {
